update users endpoint
