# storage/api-docs/api-docs.json
@@ -2160,6 +2160,65 @@
                 ]
             }
         },
+        "/api/auth/user/{id}": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "find user",
+                "operationId": "findUser",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the user to find",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "uuid"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success find user",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "users": {
+                                            "type": "array",
+                                            "items": {}
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "user not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/auth/user/d/{id}": {
             "delete": {
                 "tags": [
@@ -2181,23 +2240,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "delete user succesfull",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "users": {
-                                            "type": "array",
-                                            "items": {}
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
+                        "description": "delete user succesfull"
                     },
-                    "422": {
-                        "description": "Failed to fetch users",
+                    "404": {
+                        "description": "user not found",
                         "content": {
                             "application/json": {
                                 "schema": {
